--- a/public/pages/comprar.html
+++ b/public/pages/comprar.html
@@ -18,20 +18,20 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="w-full bg-black p-4 z-50 ">
+    <nav class="fixed w-full bg-black p-4 z-50 ">
         <div class="max-w-6xl mx-auto flex items-center justify-between">
             <div class="text-2xl font-bold">
                 <a href="#" class="text-red-500 font-mono">Cielo y Tierra</a>
             </div>
             <ul class="flex space-x-4 md:space-x-8">
                 <li>
-                    <a href="#" class="text-white hover:text-red-500 transition duration-300">Inicio</a>
+                    <a href="/" class="text-white hover:text-red-500 transition duration-100">Inicio</a>
                 </li>
                 <li>
-                    <a href="/pages/comprar.html" class="bg-red-700 text-white px-1 py-0.5 rounded-lg shadow-md hover:bg-red-500 transition">Comprar Ahora</a>
+                    <a href="/pages/comprar.html" class="bg-red-700 text-white px-1 py-1 pb-1 pt-1 rounded-lg shadow-md hover:bg-red-500 transition">Comprar Ahora</a>
                 </li>
                 <li>
-                    <a href="/pages/nosotros.html" class="w-16 md:w-32 lg:w-48 text-white hover:text-red-500 transition duration-300">Acerca de nosotros</a>
+                    <a href="/pages/nosotros.html" class="w-16 md:w-32 lg:w-48 text-white hover:text-red-500 transition duration-100">Acerca de nosotros</a>
                 </li>
             </ul>
         </div>
@@ -103,7 +103,7 @@
         <!-- Las tarjetas de productos se generarán dinámicamente aquí -->
     </div>
 
-    <script>
+    <script> 
         // Función para obtener productos de la base de datos
         async function obtenerProductos() {
             try {
@@ -121,35 +121,22 @@
                 <div class="w-full border border-blue-200 rounded-lg shadow-md p-4 bg-white">
                     <div class="relative">
                         <span class="absolute top-2 left-2 bg-orange-400 text-white text-xs font-semibold px-2 py-1 rounded-full">
-                            -${producto.descuento}%
+                            -${producto.descuento || 0}%
                         </span>
-                        <button class="absolute top-2 right-2 w-8 h-8 bg-white rounded-full shadow flex items-center justify-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-gray-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M20.84 4.61a5.5 5.5 0 00-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 00-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 000-7.78z"/>
-                            </svg>
-                        </button>
                         <div>
-                            <img src="${producto.imagen_url}" alt="${producto.nombre}" class="object-contain w-full h-48">
+                            <img src="/images/productos/default.jpg" alt="${producto.nombre}" class="object-contain w-full h-48">
                         </div>
                     </div>
                     <div class="mt-4">
                         <h3 class="text-gray-800 font-medium text-base">${producto.nombre}</h3>
-                        <p class="uppercase text-green-600 text-xs font-medium">${producto.marca}</p>
-                        <div class="flex space-x-1 text-orange-500 text-sm mt-1">
-                            ${Array.from({ length: Math.floor(producto.rating) }, () => `
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="currentColor" viewBox="0 0 20 20">
-                                    <path d="M9.049 2.927C9.349 2.2 10.651 2.2 10.951 2.927l1.558 3.779 4.004.37c.85.079 1.194 1.139.572 1.724l-2.922 2.658.87 3.917c.181.816-.68 1.448-1.419 1.034L10 13.01l-3.614 1.96c-.74.414-1.6-.218-1.419-1.034l.87-3.917-2.922-2.658c-.622-.585-.278-1.645.572-1.724l4.004-.37L9.049 2.927z"/>
-                                </svg>
-                            `).join('')}
+                        <p class="uppercase text-green-600 text-xs font-medium">${producto.descripcion}</p>
+                        <div class="flex items-baseline space-x-2 mt-2">
+                            <span class="text-blue-600 text-xl font-semibold">${producto.precio.toFixed(2)}</span>
+                            <span class="text-gray-400 text-sm line-through">${producto.precio.toFixed(2)}</span>
                         </div>
-                        <div class="flex items-end justify-between">
-                            <div class="flex items-baseline space-x-2 mt-2">
-                                <span class="text-blue-600 text-xl font-semibold">${producto.precio_descuento.toFixed(2)}</span>
-                                <span class="text-gray-400 text-sm line-through">${producto.precio.toFixed(2)}</span>
-                            </div>
-                            <button onclick="agregarAlCarrito(${producto.id})" class="w-10 h-10 rounded-full bg-blue-600 flex items-center justify-center shadow text-white">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-shopping-cart">
-                                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <div class="mt-4 flex justify-between items-center">
+                            <button onclick="agregarAlCarrito(${producto.producto_id})" class="w-10 h-10 rounded-full bg-blue-600 flex items-center justify-center shadow text-white">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M6 19m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
                                     <path d="M17 19m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
                                     <path d="M17 17h-11v-14h-2" />
@@ -161,6 +148,7 @@
                 </div>
             `;
         }
+
         // Función para renderizar todos los productos
         async function renderizarProductos() {
             const contenedor = document.getElementById('productos-container');
