--- a/public/pages/registro.html
+++ b/public/pages/registro.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar Sesión</title>
+    <title>Registro</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="flex flex-col justify-center items-center bg-white h-screen">
         <div class="w-full max-w-md p-8 space-y-8 bg-gray-100 rounded-lg shadow-md">
-            <h2 class="text-2xl font-bold text-center">Iniciar Sesión</h2>
-            <p class="text-center text-gray-600">Usa tu cuenta de Google para iniciar sesión</p>
+            <h2 class="text-2xl font-bold text-center">Registro</h2>
+            <p class="text-center text-gray-600">Usa tu cuenta de Google para registrarte</p>
             <form>
                 <button class="w-full flex items-center justify-center bg-red-600 text-white py-2 rounded-lg hover:bg-red-700 transition">
                     <svg class="w-6 h-6 mr-2" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
@@ -25,10 +25,10 @@
                         c0.001-0.001,0.002-0.001,0.003-0.002l6.19,5.238C36.971,39.205,44,34,44,24C44,22.659,43.862,21.35,43.611,20.083z">
                         </path>
                     </svg>
-                    Iniciar con Google
+                    Registrarse con Google
                 </button>
             </form>
-            <p class="text-center text-gray-600">¿No tienes una cuenta? <a href="/pages/registro.html" class="text-blue-600 hover:underline">Regístrate aquí</a></p>
+            <p class="text-center text-gray-600">¿Ya tienes una cuenta? <a href="/pages/inisiosesion.html" class="text-blue-600 hover:underline">Inicia sesión aquí</a></p>
         </div>
     </div>
 </body>
