--- a/public/pages/registro.html
+++ b/public/pages/registro.html
@@ -10,10 +10,10 @@
     <div class="flex flex-col justify-center items-center bg-white h-screen">
         <div class="w-full max-w-md p-8 space-y-8 bg-gray-100 rounded-lg shadow-md">
             <h2 class="text-2xl font-bold text-center">Registro</h2>
-            <form class="space-y-4">
+            <form class="space-y-4" action="/api/users" method="POST">
                 <div>
                     <label for="nombre" class="block text-sm font-medium text-gray-700">Nombre completo</label>
-                    <input type="text" id="nombre" name="nombre" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500" required>
+                    <input type="text" id="nombre" name="nombre_usuario" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500" required>
                 </div>
                 <div>
                     <label for="correo" class="block text-sm font-medium text-gray-700">Correo electrónico</label>
