registro validado a comprar

--- a/public/pages/comprarRegistrado.html
+++ b/public/pages/comprarRegistrado.html
@@ -32,21 +32,20 @@
           <a href="/pages/nosotros.html" class="w-16 md:w-32 lg:w-48 text-white hover:text-white transition duration-100 hover:underline hover:underline-offset-4 hover:decoration-blue-500">Acerca de nosotros</a>
         </li>
         <li>
-          <a href="/pages/inisiosesion.html" class="flex items-center text-white hover:text-white transition duration-100 hover:underline hover:underline-offset-4 hover:decoration-blue-500">
-            <img src="/images/icons/Register.gif" alt="Login Icon" class="w-6 h-6 mr-2 hover:animate-bounce" />
-            Iniciar Sesión
-          </a>
+          <button class="bg-transparent text-white hover:animate-bounce focus:outline-none">
+            <img src="/images/icons/Cart.svg" alt="Cart Icon" class="w-6 h-6" />
+          </button>
         </li>
         <li>
-            <img src="/images/icons/Cart.gif" alt="Login Icon" class="w-6 h-6 mr-2 hover:animate-bounce" />
-          </li>
-        
+          <button class="bg-transparent text-white hover:animate-bounce focus:outline-none">
+            <img src="/images/icons/Heart.svg" alt="Heart Icon" class="w-6 h-6" />
+          </button>
+        </li>
         <li>
-            <img src="/images/icons/Heart.svg" alt="Login Icon" class="w-6 h-6 mr-2 hover:animate-bounce" />
-          </li>
-        <li>
-            <img src="/images/icons/avatar.svg" alt="Login Icon" class="w-6 h-6 mr-2 hover:animate-bounce" />
-          </li>
+          <button class="bg-transparent text-white hover:animate-bounce focus:outline-none">
+            <img src="/images/icons/avatar.svg" alt="Avatar Icon" class="w-6 h-6" />
+          </button>
+        </li>
       </ul>
     </div>
   </nav>
