validacion de inisio de sesion y cifrado hash

--- a/public/pages/comprarRegistrado.html
+++ b/public/pages/comprarRegistrado.html
@@ -32,9 +32,9 @@
           <a href="/pages/nosotros.html" class="w-16 md:w-32 lg:w-48 text-white hover:text-white transition duration-100 hover:underline hover:underline-offset-4 hover:decoration-blue-500">Acerca de nosotros</a>
         </li>
         <li>
-          <button class="bg-transparent text-white hover:animate-bounce focus:outline-none">
+          <a href="/pages/carrito.html" class="bg-transparent text-white hover:animate-bounce focus:outline-none">
             <img src="/images/icons/Cart.svg" alt="Cart Icon" class="w-6 h-6" />
-          </button>
+          </a>
         </li>
         <li>
           <button class="bg-transparent text-white hover:animate-bounce focus:outline-none">
